--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com" target="_blank">GitHub</a></li>
             <li><a href="https://portfolio.com" target="_blank">Portfolio</a></li>
+            <li><a href="https://portfolio.com" target="_blank">Portfolio</a></li>
+            <li><a href="https://portfolio.com" target="_blank">Portfolio</a></li>
         </ul>
     </div>
 
